separated style & script

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/023/034/original/41923.png?1639768101/"
     />
     <link rel="stylesheet" href="stylesheet.css" />
-    <link rel="script" href="script.js" />
+
     <script
       src="https://kit.fontawesome.com/7e54182f76.js"
       crossorigin="anonymous"
@@ -219,5 +219,6 @@
         Buy me coffee <i class="fas fa-mug-hot"></i>
       </button>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
